roxctl/connectivity-diff/testdata/acs-security-demos-new/acs_netpols.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  labels:
    network-policy-buildtime-generator.stackrox.io/generated: "true"
  name: asset-cache-netpol
  namespace: frontend
spec:
  ingress: [] # blocking any ingress 
  podSelector:
    matchLabels:
      app: asset-cache
  policyTypes:
  - Ingress
  - Egress

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  labels:
    network-policy-buildtime-generator.stackrox.io/generated: "true"
  name: catalog-netpol
  namespace: backend
spec:
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: recommendation
    ports:
    - port: 8080
      protocol: TCP
  - from:
    - podSelector:
        matchLabels:
          app: reports
    ports:
    - port: 9080       # changed to the new port
      protocol: TCP
  podSelector:
    matchLabels:
      app: catalog
  policyTypes:
  - Ingress
  - Egress

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  labels:
    network-policy-buildtime-generator.stackrox.io/generated: "true"
  name: checkout-netpol
  namespace: backend
spec:
  egress:
  - ports:
    - port: 8080
      protocol: TCP
    to:
    - podSelector:
        matchLabels:
          app: notification
  - ports:
    - port: 8080
      protocol: TCP
    to:
    - podSelector:
        matchLabels:
          app: recommendation
  - ports:
    - port: 8080
      protocol: TCP
    to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: payments
      podSelector:
        matchLabels:
          app: gateway
  - ports:
    - port: 5353
      protocol: UDP
    to:
    - namespaceSelector: {}
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: frontend
      podSelector:
        matchLabels:
          app: webapp
    ports:
    - port: 8080
      protocol: TCP
  podSelector:
    matchLabels:
      app: checkout
  policyTypes:
  - Ingress
  - Egress

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  labels:
    network-policy-buildtime-generator.stackrox.io/generated: "true"
  name: gateway-netpol
  namespace: payments
spec:
  egress:
  - ports:
    - port: 8080
      protocol: TCP
    to:
    - podSelector:
        matchLabels:
          app: mastercard-processor  # removed its deployment - the rules will not be considered
  - ports:
    - port: 8080
      protocol: TCP
    to:
    - podSelector:
        matchLabels:
          app: visa-processor
  - ports:
    - port: 5353
      protocol: UDP
    to:
    - namespaceSelector: {}
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: backend
      podSelector:
        matchLabels:
          app: checkout
    ports:
    - port: 8080
      protocol: TCP
  podSelector:
    matchLabels:
      app: gateway
  policyTypes:
  - Ingress
  - Egress

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  labels:
    network-policy-buildtime-generator.stackrox.io/generated: "true"
  name: mastercard-processor-netpol
  namespace: payments
spec:
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: gateway
    ports:
    - port: 8080
      protocol: TCP
  podSelector:
    matchLabels:
      app: mastercard-processor
  policyTypes:
  - Ingress
  - Egress

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  labels:
    network-policy-buildtime-generator.stackrox.io/generated: "true"
  name: notification-netpol
  namespace: backend
spec:
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: checkout
    ports:
    - port: 8080
      protocol: TCP
  podSelector:
    matchLabels:
      app: notification
  policyTypes:
  - Ingress
  - Egress

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  labels:
    network-policy-buildtime-generator.stackrox.io/generated: "true"
  name: recommendation-netpol
  namespace: backend
spec:
  egress:
  - ports:
    - port: 8080
      protocol: TCP
    to:
    - podSelector:
        matchLabels:
          app: catalog
  - ports:
    - port: 5353
      protocol: UDP
    to:
    - namespaceSelector: {}
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: checkout
    ports:
    - port: 8080
      protocol: TCP
  - from:
    - podSelector:
        matchLabels:
          app: reports
    ports:
    - port: 8080
      protocol: TCP
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: frontend
      podSelector:
        matchLabels:
          app: webapp
    ports:
    - port: 8080
      protocol: TCP
  podSelector:
    matchLabels:
      app: recommendation
  policyTypes:
  - Ingress
  - Egress

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  labels:
    network-policy-buildtime-generator.stackrox.io/generated: "true"
  name: reports-netpol
  namespace: backend
spec:
  egress:
  - ports:
    - port: 9080  # changed 
      protocol: TCP
    to:
    - podSelector:
        matchLabels:
          app: catalog
  - ports:
    - port: 8080
      protocol: TCP
    to:
    - podSelector:
        matchLabels:
          app: recommendation
  - ports:
    - port: 5353
      protocol: UDP
    to:
    - namespaceSelector: {}
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: frontend
      podSelector:
        matchLabels:
          app: webapp
    ports:
    - port: 8080
      protocol: TCP
  podSelector:
    matchLabels:
      app: reports
  policyTypes:
  - Ingress
  - Egress

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  labels:
    network-policy-buildtime-generator.stackrox.io/generated: "true"
  name: shipping-netpol
  namespace: backend
spec:
  ingress: [] # removed
  podSelector:
    matchLabels:
      app: shipping
  policyTypes:
  - Ingress
  - Egress

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  labels:
    network-policy-buildtime-generator.stackrox.io/generated: "true"
  name: visa-processor-netpol
  namespace: payments
spec:
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: gateway
    ports:
    - port: 8080
      protocol: TCP
  podSelector:
    matchLabels:
      app: visa-processor
  policyTypes:
  - Ingress
  - Egress

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  labels:
    network-policy-buildtime-generator.stackrox.io/generated: "true"
  name: webapp-netpol
  namespace: frontend
spec:
  egress:
  - ports:
    - port: 8080
      protocol: TCP
    to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: backend
      podSelector:
        matchLabels:
          app: checkout
  - ports:
    - port: 8080
      protocol: TCP
    to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: backend
      podSelector:
        matchLabels:
          app: recommendation
  - ports:
    - port: 8080
      protocol: TCP
    to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: backend
      podSelector:
        matchLabels:
          app: reports
  # removed conn
  - ports:
    - port: 5353
      protocol: UDP
    to:
    - namespaceSelector: {}
  ingress:
  - from:
    - namespaceSelector: {}
    ports:
    - port: 8080
      protocol: TCP
  podSelector:
    matchLabels:
      app: webapp
  policyTypes:
  - Ingress
  - Egress

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  labels:
    network-policy-buildtime-generator.stackrox.io/generated: "true"
  name: default-deny-in-namespace-backend
  namespace: backend
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  labels:
    network-policy-buildtime-generator.stackrox.io/generated: "true"
  name: default-deny-in-namespace-frontend
  namespace: frontend
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  labels:
    network-policy-buildtime-generator.stackrox.io/generated: "true"
  name: default-deny-in-namespace-payments
  namespace: payments
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
